<resources>
    <string name="app_name">DAWASCO</string>
    <string name="enpoint_url" translatable="false">http://dawasco.herokuapp.com</string>
    <string name="mapbox_style" translatable="false">mapbox://styles/mapbox/streets-v10</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="et_phone_number">Enter phone number</string>
    <string name="action_next">Next</string>
    <string name="action_create_account">Save And Continue</string>
    <string name="text_user_name">Enter your full name</string>
    <string name="text_id_title">User Details</string>
    <string name="text_id_desc">Enter your details and then click the SAVE button to start</string>
    <string name="text_areaCode">Area Code</string>
    <string name="action_startReport">Select Category</string>
    <string name="txt_loading" translatable="false">&#8230;</string>
    <string name="msg_server_error">Error loading data from the server</string>
    <string name="action_reload">Try Again</string>
    <string name="action_toggle_pending">Toggle Pending</string>
    <string name="action_view_account">User Account</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="text_user_phone">Phone number</string>
    <string name="text_empty_phone">Not provided</string>
    <string name="text_profile_desc">Profile picture</string>
    <string name="text_user_email">Email</string>
    <string name="text_empty_email">Not provided</string>
    <string name="text_user_location">Area</string>
    <string name="text_empty_location">Not provided</string>
    <string name="text_user_meter_number">Meter Number</string>
    <string name="text_empty_meter_number">Not provided</string>
    <string name="action_logout">Log out</string>
    <string name="text_confirm_logout">Are you sure you want to logout?</string>
    <string name="action_stay">Stay</string>
    <string name="text_empty_issues">You have not reported any issue.</string>
    <string name="default_area_code" translatable="false">255</string>
    <string name="text_signing_up">Signing Up</string>
    <string name="text_StatusText">Please wait while we save your account details</string>
    <string name="et_account_number">DAWASCO account number</string>
    <string name="et_meter_number">DAWASCO meter number</string>
    <string name="action_save_profile">Update</string>
    <string name="text_empty_name">Not provided</string>
    <string name="text_empty_account">Not provided</string>
    <string name="action_view_details">View Details</string>
    <string name="action_issue_progress">Issue Progress</string>
    <string name="action_show_on_map">Show On Map</string>
    <string name="text_issue_attachment">Extras</string>
    <string name="text_audio_attachment">Audio</string>
    <string name="text_video_attachment">Video</string>
    <string name="text_log_content" translatable="false"><![CDATA[%s]]></string>
    <string name="text_log_extras" translatable="false"><![CDATA[%s@]]></string>
    <string name="text_logs">Internal Notes</string>
    <string name="text_new_issue">Report New Issue</string>
    <string name="text_view_issues">Reported Issues</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_settings">Settings</string>
    <string name="text_menu_icon">Menu Icon</string>
    <string name="text_public_issue">Public Issue</string>
    <string name="text_private_issue">Private Issue</string>
    <string name="text_select_issue_category">Report An Issue</string>
    <string name="text_services">Select Service</string>
    <string name="text_user_account_number">Account Number</string>
    <string name="cam_preview">Camera Preview</string>
    <string name="text_capture_picture">Capture Picture</string>
    <string name="action_capture_audio">Record Audio</string>
    <string name="text_issue_description">Issue Description</string>
    <string name="text_issue_category">Issue Category</string>
    <string name="text_issue_date">Date</string>
    <string name="text_select_location">Change Location</string>
    <string name="text_select_area">Select Area</string>
    <string name="title_loading_services">Loading Services</string>
    <string name="text_loading_services">Loading open311Services. Please wait&#8230;</string>
    <string name="text_check_mark" translatable="false">✔</string>
    <string name="text_confirm_exit">All unsaved changes will be lost. Are you sure you want to exit?</string>
    <string name="action_confirm_exit">Yes, exit</string>
    <string name="action_cancel_exit">Remain</string>
    <string name="title_menu">Home</string>
    <string name="text_fetching_location">Fetching Location&#8230;</string>
    <string name="text_fetch_location_error">Error fetching location.</string>
    <string name="action_send">Send</string>
    <string name="service_not_available">Location Not Available</string>
    <string name="invalid_lat_long_used">Invalid longitude or latitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="text_record_audio">Record Audio</string>
    <string name="text_get_location">Get Location</string>
    <string name="text_curr_location" translatable="false">lat: %1$2f, long: %2$2f</string>
    <string name="no_geocoder_available">No Geo-coder Available</string>
    <string name="text_fetch_location">Fetch Current Location&#8230;</string>
    <string name="accept_location">Use Location</string>
    <string name="title_current_location">Current Location</string>
    <string name="warning_empty_issue_body">Cannot post issue without description. Please provide descriptions!</string>
    <string name="warning_empty_issue_location">Cannot open issue without location.</string>
    <string name="warning_empty_service_id">Cannot post an issue without Service Type. Please, select Service Type and try again.</string>
    <string name="warning_no_reporter">Your user details could not be found. Please update your user profile and try again.</string>
    <string name="text_opening_ticket">Posting Issue to DAWASCO</string>
    <string name="msg_network_error">Network Error</string>
    <string name="text_request_location">We need location to find and resolve the problem.</string>
    <string name="text_confirm_location">OK, Use My Location</string>
    <string name="text_deny_location">No, Thanks!</string>
    <string name="text_item_saved">Account Updated</string>
    <string name="text_issue_tickets">Issues</string>
    <string name="action_confirm_access_location">Turn On GPS</string>
    <string name="action_decline_access_location">Exit</string>
    <string name="text_allow_gps_location_access">To improve accuracy, we require that you turn on your GPS. Would you like to turn it on now?</string>
    <string name="intro_title__open_ticket">Register</string>
    <string name="intro_desc__open_ticket">Report water related issues straight to DAWASCO.</string>
    <string name="intro_title__extended_support">Extended Support</string>
    <string name="intro_desc__extended_support">Unlock the power of your smart phone. Use camera to do live capture of pieces of evidence, record audio, or send geo-coordinates along with your request.</string>
    <string name="text_err_pre_condition_failed">Error when checking pre-condition for the first time install.</string>
    <string name="text_quit">Report Incident and Quit</string>
    <string name="intro_title__get_notified">Get Notified</string>
    <string name="intro_desc__get_notified">Receive update whenever the issues you report are being processed.</string>
    <string name="text_retry">Retry</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_http_error">Http Error occurred. Do you want to report this incident? </string>
    <string name="text_report">Yes, Report</string>
    <string name="text_use_network_manager">Use network provider to fetch location.</string>
    <string name="text_use_gps">Use GPS to detect my location.</string>
    <string name="text_location_title">Current Location</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">SETTINGS</string>
    <string name="action_about">About</string>
    <string name="action_announcements">Announcements</string>
    <string name="text_media_unmounted">Media unmounted.</string>
    <string name="status_changes">Status Changes</string>
    <string name="text_received_status">Issue ticket opened</string>
    <string name="text_status_pending">Pending</string>
    <string name="text_status_closed">Closed</string>
    <string name="tab_all_issues">All Issues</string>
    <string name="tab_open_issues">Open</string>
    <string name="tab_closed_issues">Closed</string>
    <string name="dialog_successful_submission">Your issue has been received by DAWASCO. The ticket ID for the issue is %s.</string>
    <string name="button_see_issue_details">View Issue Status</string>
    <string name="error_username_required">User name is required.</string>
    <string name="error_phone_required">Phone number is required.</string>
    <string name="text_location_instruction">Log tap to select location.</string>
    <string name="text_gps_discovery_on">GPS discovery enabled.</string>
    <string name="text_gps_discovery_off">GPS discovery disabled.</string>
    <string name="text_enable_gps_discovery">Enable GPS auto discovery?</string>
    <string name="text_close_status">Issue ticket closed</string>
    <string name="text_days_time_unit">Days</string>
    <string name="text_hours_time_unit">Hours</string>
    <string name="text_minutes_time_unit">Minutes</string>
    <string name="text_seconds_time_unit">Seconds</string>
    <string name="text_pending_description">Issue is still not resolved</string>
    <string name="text_and">and</string>
    <string name="text_status">Issue Status</string>
    <string name="action_done">Save</string>
    <string name="registration_done">Save and Continue</string>
    <string name="registration_title">Registration</string>
    <string name="registration_description">Submit issues to DAWASCO. You will be notified when problems are fixed.</string>
    <string name="text_report_issue">Report Issue</string>
    <string name="text_view_categories">View All Categories</string>
    <string name="title_reported_issue">Recently Reported Issues</string>
    <string name="text_post_first_item">Report My First Issue</string>
    <string name="text_empty_media_details">You have never reported an issue. Is everything OK?</string>
    <string name="item_picture">Picture Item</string>
    <string name="text_view_more" translatable="false">1+</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="text_reported_issues">REPORTER ISSUES</string>
    <string name="text_issue_title">Issue Category</string>
    <string name="text_issue_photos">Photos</string>
    <string name="text_image_src_selection_details">Select photo source:</string>
    <string name="text_image_src_browse_option">Use existing photo</string>
    <string name="text_image_src_camera_option">Take new photo</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="title_issue_description">Explain what\'s wrong</string>
    <string name="text_issue_description_hint">Eg. This leakage has been here for three weeks and…</string>
    <string name="text_issue_title_hint">Eg. Leakage, kanisani street</string>
    <string name="text_submit">Submit</string>
    <string name="text_missing_resource">Cannot read media item</string>
    <string name="action_select_issue_category">Select issue category</string>
    <string name="action_close">Close</string>
    <string name="action_select">Select</string>
    <string name="text_user_default_language">Primary language</string>
</resources>