<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/tv_ItemsDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_image_src_selection_details"/>

    <RadioGroup
        android:id="@+id/rg_ImageSourceGroupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioBtn_BrowseOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_image_src_browse_option"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioBtn_StartCameraOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_image_src_camera_option"/>

    </RadioGroup>

</LinearLayout>