<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- User Controls & Views (e.g. SurfaceView) will be added dynamically to the frame-layout -->
    <FrameLayout
        android:id="@+id/fr_CameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_alignParentTop="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_Shutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_capture_picture"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp"/>

    <LinearLayout
        android:id="@+id/ll_NextAction"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:gravity="end">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_mic_black_24dp"
            style="?attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:contentDescription="@string/text_record_audio" />

        <EditText
            android:id="@+id/et_Msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/text_issue_description"/>

        <Button
            android:id="@+id/btn_OpenIssue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/action_send"
            android:textColor="@color/colorAccent"
            style="?attr/borderlessButtonStyle"
            android:drawableEnd="@drawable/ic_send_24dp"/>

    </LinearLayout>

</RelativeLayout>