<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/spinerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_select_issue_category"
            android:textSize="17sp"
            android:textStyle="bold" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center|start"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:src="@drawable/ic_search_black_36dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/searchBox"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_marginStart="5dp"-->
                <!--android:background="#ffffff"-->
                <!--android:inputType="text" />-->

        <!--</LinearLayout>-->

        <!--<View-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="0.1dp"-->
            <!--android:background="#d1d1d1" />-->

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:divider="#d1d1d1"
            android:dividerHeight="0.1dp" />

        <RelativeLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_select"/>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_close" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>