<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- full name -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="24dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/StyledEditTextTheme"
        android:textColorHint="#c1c2c4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_phoneNumber"
            android:nextFocusForward="@id/et_phoneNumber"
            android:hint="@string/text_user_name">
            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <!-- Phone number (Including zip-code) -->
    <LinearLayout
        android:id="@+id/ll_UserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_AreaCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:hintTextAppearance="@style/StyledEditTextTheme"
            android:textColorHint="#c1c2c4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_AreaCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:imeOptions="actionNext"
                android:text="@string/default_area_code"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_PhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            app:hintTextAppearance="@style/StyledEditTextTheme"
            android:textColorHint="#c1c2c4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_phone_number"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:maxLength="9"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!-- Language Preference (Hidden by default) -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_UserDefaultLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="24dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/StyledEditTextTheme"
        android:textColorHint="#c1c2c4">

        <android.support.design.widget.TextInputEditText
            android:visibility="gone"
            android:id="@+id/et_DefaultUserLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/text_user_default_language"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </android.support.design.widget.TextInputLayout>

    <!-- email address -->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/til_Email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingBottom="16dp"-->
    <!--android:paddingTop="8dp"-->
    <!--app:errorEnabled="true"-->
    <!--app:hintTextAppearance="@style/StyledEditTextTheme"-->
    <!--android:textColorHint="#c1c2c4">-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/et_UserEmail"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/text_user_email"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!-- account number -->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/til_AccountNumber"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="0.5"-->
    <!--app:hintTextAppearance="@style/StyledEditTextTheme"-->
    <!--android:textColorHint="#c1c2c4">-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/et_AccountNumber"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/et_account_number"-->
    <!--android:inputType="number"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

</LinearLayout>